@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.1.13"
+  VERSION = "3.1.14"
 end
